<resources>
    <string name="app_name">TChatDebug</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="about_app">This is chat app for Tinkoff Android course</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="dialogs">Dialogs</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="incorrect">Incorrect username or password</string>
</resources>
