<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menuTop"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dialogs"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/dialogs"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/about"/>
    </group>

    <group
        android:id="@+id/menuBottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_exit"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/exit"/>
    </group>

</menu>
